--- a/Section8/Box_Model/app.css
+++ b/Section8/Box_Model/app.css
@@ -1,12 +1,23 @@
+body {
+    margin: 0;
+}
+
 div {
     width: 200px;
     height: 250px;
     background-color: #e5989b;
 }
 
+span {
+    margin-left: 30px;
+}
+
 h1 {
     background-color: pink;
-    width: 100px;
+    width: 200px;
+    padding-left: 100px;
+    padding-top: 50px;
+    margin: 0;
 }
 
 #one {
@@ -15,6 +26,8 @@ h1 {
     border-color: black;
     border-style: solid;
     /* box-sizing: border-box; */
+    margin-left: 50px;
+    margin-bottom: 100px;
 }
 
 #two {
@@ -23,6 +36,9 @@ h1 {
     border-width: 3px;
     border-style: dashed;
     border-left-width: 8px;
+    padding-right: 50px;
+    margin: 200px;
+
 }
 
 #three {
@@ -30,4 +46,8 @@ h1 {
     border: 4px solid black;
     border-left-style: dotted;
     border-radius: 50%;
+}
+
+button {
+    padding: 20px;
 }
