--- a/Section9/Opacity/app.css
+++ b/Section9/Opacity/app.css
@@ -9,3 +9,10 @@ select {
     height: 50%;
     background-color: rgba(255, 255, 255, 0.7);
 }
+
+#opacity {
+    width: 50%;
+    height: 50%;
+    background-color: yellow;
+    opacity: 0.3;
+}
